Create new "number" field command

--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Šablona se zadaným předponou již existuje.'
 state.conflict.name: 'Stav se zadaným jménem již existuje.'
 state.conflict.abbreviation: 'Stav se zadaným zkratkou již existuje.'
 field.conflict.name: 'Pole se zadaným jménem již existuje.'
+field.min_max_values: 'Maximální hodnota musí být větší než minimální.'
+field.default_value: 'Výchozí hodnota musí být v rozmezí %min% až %max%.'
+field.value_range: 'Hodnota "%name%" musí být v rozmezí %min% až %max%.'
