--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Template with entered prefix already exists.'
 state.conflict.name: 'State with entered name already exists.'
 state.conflict.abbreviation: 'State with entered abbreviation already exists.'
 field.conflict.name: 'Field with entered name already exists.'
+field.min_max_values: 'Maximum value should be greater then minimum one.'
+field.default_value: 'Default value should be in range from %min% to %max%.'
+field.value_range: 'Value of "%name%" should be in range from %min% to %max%.'
