--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Ya existe una Plantilla con ese prefijo.'
 state.conflict.name: 'Ya existe un Estado con ese nombre.'
 state.conflict.abbreviation: 'Ya existe un Estado con ese inicial.'
 field.conflict.name: 'Ya existe un Campo con ese nombre.'
+field.min_max_values: 'El valor máximo debe ser mayor que el mínimo.'
+field.default_value: 'El valor predeterminado debe estar comprendido entre %min% y %max%.'
+field.value_range: 'El valor de "%name%" debe estar comprendido entre %min% y %max%.'
