--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Il existe déjà un modèle portant ce un préfixe.'
 state.conflict.name: 'Il existe déjà un état portant ce nom.'
 state.conflict.abbreviation: 'Il existe déjà un état portant ce abréviation.'
 field.conflict.name: 'Il existe déjà un champ portant ce nom.'
+field.min_max_values: 'Le maximum doit être superieur au minimum.'
+field.default_value: 'La valeur par défaut doit être comprise entre %min% et %max%.'
+field.value_range: 'La valeur de "%name%" doit être comprise entre %min% et %max%.'
