--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Lekāls ar tādu priedēkli jau eksistē.'
 state.conflict.name: 'Stāvoklis ar tādu nosaukumu jau eksistē.'
 state.conflict.abbreviation: 'Stāvoklis ar tādu saīsinājumu jau eksistē.'
 field.conflict.name: 'Atribūts ar tādu nosaukumu jau eksistē.'
+field.min_max_values: 'Maksimālajam lielumam jābūt lielākam par minimālo.'
+field.default_value: 'Noklusējuma nozīmei jąbūt no %min% līdz %max% apgabalā.'
+field.value_range: '"%name%" lauciņa lielumam jābūt no %min% līdz %max% apgabalā.'
