--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Sjabloon met ingevoerde voorvoegsel bestaat reeds.'
 state.conflict.name: 'Status met ingevoerde naam bestaat reeds.'
 state.conflict.abbreviation: 'Status met ingevoerde afkorting bestaat reeds.'
 field.conflict.name: 'Veld met ingevoerde naam bestaat reeds.'
+field.min_max_values: 'Maximum waarde moet groter dan minimum waarde zijn.'
+field.default_value: 'Standaardwaarde moet in het bereik %min% tot %max% liggen.'
+field.value_range: 'Waarde "%name%" moet in het bereik %min% tot %max% liggen.'
