--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Szablon o podanej prefixie już istnieje.'
 state.conflict.name: 'Stan o tej nazwie już istnieje.'
 state.conflict.abbreviation: 'Stan o tej skrót już istnieje.'
 field.conflict.name: 'Pole o podanej nazwie już istnieje.'
+field.min_max_values: 'Wartość maksymalna powinna być większa od wartości minimalnej.'
+field.default_value: 'Wartość domyślna powinna być z przedziału od %min% do %max%.'
+field.value_range: 'Wartość "%name%" powinna być z przedziału od %min% do %max%.'
