--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'O prefixo escolhido já existe.'
 state.conflict.name: 'O estado escolhido já existe.'
 state.conflict.abbreviation: 'O abreviação já existe.'
 field.conflict.name: 'O Campo escolhido já existe.'
+field.min_max_values: 'O valor máximo deve ser maior do que o mínimo.'
+field.default_value: 'O valor padrão deve conter valores entre %min% e %max%.'
+field.value_range: 'O Valor de "%name%" deve estar entre %min% e %max%.'
