--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Sablonul prefixul introdus exista deja.'
 state.conflict.name: 'Numele starii deja exista.'
 state.conflict.abbreviation: 'Prescurtarea starii deja exista.'
 field.conflict.name: 'Numele campului deja exista.'
+field.min_max_values: 'Valoarea maxima trebuie sa fie mai mare decat cea minima.'
+field.default_value: 'Valoarea implicita trebuie sa fie in intervalul %min% la %max%.'
+field.value_range: 'Valoarea "%name%" trebuie sa fie in intervalul %min% pana la %max%.'
