--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Mall med detta prefixet finns redan.'
 state.conflict.name: 'Status med detta namnet finns redan.'
 state.conflict.abbreviation: 'Status med detta förkortningen finns redan.'
 field.conflict.name: 'Fält med detta namnet finns redan.'
+field.min_max_values: 'Högsta värdet bör vara större än minimum en.'
+field.default_value: 'Standardvärdet bör vara i intervallet från %min% till %max%.'
+field.value_range: 'Värdet av "%name%" ska vara i intervallet från %min% till %max%.'
