--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -101,3 +101,6 @@ template.conflict.prefix: 'Eine Anfrageart mit diesem Präfix existiert bereits.
 state.conflict.name: 'Ein Status mit diesem Namen existiert bereits.'
 state.conflict.abbreviation: 'Ein Status mit diesem Abkürzung existiert bereits.'
 field.conflict.name: 'Ein Zusatz mit diesem Namen existiert bereits.'
+field.min_max_values: 'Das Maximum muss größer als das Minimum sein.'
+field.default_value: 'Der vorgegebene Wert muss im Bereich von %min% bis %max% liegen.'
+field.value_range: 'Der Wert von "%name%" muss im Bereich von %min% bis %max% liegen.'
