--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -104,3 +104,5 @@ field.conflict.name: 'Field with entered name already exists.'
 field.min_max_values: 'Maximum value should be greater then minimum one.'
 field.default_value: 'Default value should be in range from %min% to %max%.'
 field.value_range: 'Value of "%name%" should be in range from %min% to %max%.'
+list.conflict.key: 'Item with entered key already exists.'
+list.conflict.value: 'Item with entered value already exists.'
