--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -104,3 +104,5 @@ field.conflict.name: 'Ya existe un Campo con ese nombre.'
 field.min_max_values: 'El valor máximo debe ser mayor que el mínimo.'
 field.default_value: 'El valor predeterminado debe estar comprendido entre %min% y %max%.'
 field.value_range: 'El valor de "%name%" debe estar comprendido entre %min% y %max%.'
+list.conflict.key: ~
+list.conflict.value: ~
