--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -104,3 +104,5 @@ field.conflict.name: 'Veld met ingevoerde naam bestaat reeds.'
 field.min_max_values: 'Maximum waarde moet groter dan minimum waarde zijn.'
 field.default_value: 'Standaardwaarde moet in het bereik %min% tot %max% liggen.'
 field.value_range: 'Waarde "%name%" moet in het bereik %min% tot %max% liggen.'
+list.conflict.key: ~
+list.conflict.value: ~
