--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -104,3 +104,5 @@ field.conflict.name: 'O Campo escolhido já existe.'
 field.min_max_values: 'O valor máximo deve ser maior do que o mínimo.'
 field.default_value: 'O valor padrão deve conter valores entre %min% e %max%.'
 field.value_range: 'O Valor de "%name%" deve estar entre %min% e %max%.'
+list.conflict.key: ~
+list.conflict.value: ~
