--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -26,7 +26,7 @@ security.remember_me: 'Zůstat přihlášený'
 security.session_expired: 'Vaše sezení vypršelo. Znovu se přihlaste, prosím.'
 security.confirm_exit: 'Jste si jisti, že se chcete odhlásit?'
 security.authentication: Autentifikace
-'Bad credentials': 'Neznámé uživatelské jméno nebo chybné heslo.'
+'Bad credentials.': 'Neznámé uživatelské jméno nebo chybné heslo.'
 'User account is disabled.': 'Účet je zablokován.'
 'User account is locked.': 'Účet je uzamčen.'
 settings: Nastavení
