--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -26,7 +26,7 @@ security.remember_me: 'Atcerēties mani'
 security.session_expired: 'Your session has expired. Please login again.'
 security.confirm_exit: 'Vai tiešām vēlaties iziet?'
 security.authentication: Pilnvarošana
-'Bad credentials': 'Nezināms lietotāja vārds vai parole.'
+'Bad credentials.': 'Nezināms lietotāja vārds vai parole.'
 'User account is disabled.': 'Lietotāja konts ir atslēgts.'
 'User account is locked.': 'Lietotāja konts ir bloķēts.'
 settings: Iestatījumi
