--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -26,7 +26,7 @@ security.remember_me: 'Păstrează autentificarea'
 security.session_expired: 'Your session has expired. Please login again.'
 security.confirm_exit: 'Sunteti sigur ca doriti sa iesiti?'
 security.authentication: Autentificare
-'Bad credentials': 'Cont inexistent sau parola incorecta.'
+'Bad credentials.': 'Cont inexistent sau parola incorecta.'
 'User account is disabled.': 'Contul este dezactivat.'
 'User account is locked.': 'Contuleste blocat.'
 settings: Setari
