--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -63,6 +63,7 @@ password.wrong: 'Wrong password.'
 password.cant_change: 'This account uses an external authentication source. Impossible to change the password.'
 security.forgot_password: 'Forgot password'
 security.forgot_password.email_sent: 'An email with instructions to choose a new password has been sent to you.'
+security.change_password: 'Change password'
 security.password_expired: 'Your password is expired.'
 key.tab: Tab
 key.space: Space
@@ -96,6 +97,18 @@ project.active: Active
 project.suspended: Suspended
 project.confirm.delete: 'Are you sure you want delete this project?'
 project.conflict.name: 'Project with entered name already exists.'
+template: Template
+templates: Templates
+template.new: 'New template'
+template.name: 'Template name'
+template.prefix: Prefix
+template.critical_age: 'Critical age'
+template.frozen_time: 'Frozen time'
+template.guest_access: 'Guest access'
+template.status: Status
+template.active: Active
+template.locked: Locked
+template.confirm.delete: 'Are you sure you want delete this template?'
 template.conflict.name: 'Template with entered name already exists.'
 template.conflict.prefix: 'Template with entered prefix already exists.'
 state.conflict.name: 'State with entered name already exists.'
